<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- The Basics -->
  <groupId>net.mademocratie.gae</groupId>
  <artifactId>mademocratie-gae</artifactId>
  <version>0-4-3-alpha</version>
  <packaging>war</packaging>

  <name>ma-dem-ae</name>

  <properties>
    <mademocratie.version>${project.version}</mademocratie.version>
    <!-- deployment or development (wicket)-->
    <mademocratie.configuration>deployment</mademocratie.configuration>

    <!-- Sets the project's default encoding.
         http://docs.codehaus.org/display/MAVENUSER/POM+Element+for+Source+File+Encoding -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <!--
      Specify AppEngine version for your project. It should match SDK version pointed to
      by ${gae.home} property (Typically, one used by your Eclipse plug-in)
    <gae.version>1.7.1</gae.version>
    -->
    <gae.version>1.7.0</gae.version>

      <!-- Upload to http://test.latest.<applicationName>.appspot.com by default -->
    <gae.application.version>test</gae.application.version>
    <!-- port defaults to 8080 -->
    <gae.port>8080</gae.port>
    <wicket.version>6.0.0</wicket.version>
    <datanucleus.version>3.1.1</datanucleus.version>
    <junit.version>4.8.2</junit.version>
    <mockito.version>1.8.5</mockito.version>
    <skipUTs>false</skipUTs>
    <maven-failsafe-plugin.version>2.12.4</maven-failsafe-plugin.version>
    <maven-surefire-plugin.version>2.12.4</maven-surefire-plugin.version>
  </properties>

  <pluginRepositories>
      <pluginRepository>
          <id>mvnrepository.com</id>
          <url>http://mvnrepository.com/artifact/</url>
          <releases><enabled>true</enabled></releases>
          <snapshots><enabled>true</enabled></snapshots>
      </pluginRepository>
      <pluginRepository>
          <id>sonatypePl</id>
          <url>http://repository.sonatype.org</url>
          <releases><enabled>true</enabled></releases>
          <snapshots><enabled>true</enabled></snapshots>
      </pluginRepository>
      <pluginRepository>
          <id>datanucleus</id>
          <url>http://www.datanucleus.org/downloads/maven2</url>
      </pluginRepository>
      <pluginRepository>
          <id>mavenHub</id>
          <url>http://mavenhub.com/mvn/central/</url>
      </pluginRepository>
  </pluginRepositories>
  <repositories>
      <repository><!-- com.google.appengine:appengine-local-runtime:jar: -->
          <id>maven2-repository.seasar.org</id>
          <name>seasar.org Repository for Maven</name>
          <url>http://maven.seasar.org/maven2/</url>
          <releases><enabled>true</enabled></releases>
          <snapshots><enabled>false</enabled></snapshots>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>http://repository.sonatype.org</url>
          <releases><enabled>true</enabled></releases>
          <snapshots><enabled>true</enabled></snapshots>
      </repository>
      <repository>
          <id>mavenHub</id>
          <url>http://mavenhub.com/mvn/central/</url>
      </repository>
  </repositories>
  <profiles>
    <!--
      We can configure our integration server to activate this profile and
      perform gae:deploy, thus uploading latest snapshot to the
      http://1.latest.<applicationName>.appspot.com automatically
    -->
    <profile>
      <id>integration-build</id>
      <properties>
        <gae.application.version>stage</gae.application.version>
      </properties>
    </profile>

    <!--
      This profile will activate automatically during release and upload
      application to the http://2.latest.<applicationName>.appspot.com (We
      might want to set the 2nd version as our applications Default version
      to be accessible at http://<applicationName>.appspot.com)
    -->
    <profile>
      <id>release-build</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>

      <properties>
        <!--
          During release, set application version in appengine-web.xml to 2
        -->
        <gae.application.version>release</gae.application.version>
      </properties>
    </profile>
  </profiles>

  <build>
    <pluginManagement>
        <plugins>
        <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                        <configuration>
                            <!-- Fork to be sure that context are clean (avoid transaction problems) -->
                            <forkMode>always</forkMode>
                            <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
          <plugin>
              <artifactId>maven-surefire-plugin</artifactId>
              <configuration>
                  <!-- unit tests are skipped when skipTests = true or skipUTs=true -->
                  <!-- see properties for further details -->
                  <skipTests>${skipUTs}</skipTests>
              </configuration>
          </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <!--
        The actual maven-gae-plugin. Type "mvn gae:run" to run project, "mvn gae:update"
        to upload to GAE.
      -->
      <plugin>
        <groupId>net.kindleit</groupId>
        <artifactId>maven-gae-plugin</artifactId>
        <version>0.9.4</version>
        <configuration>
          <sdkDir>${gae.home}</sdkDir>
            <!-- http://code.google.com/p/maven-gae-plugin/issues/detail?id=38
           <jvmFlags>
            <jvmFlag>-Xdebug</jvmFlag>
            <jvmFlag>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=8000</jvmFlag>
          </jvmFlags>
          -->
        </configuration>
        <dependencies>
              <dependency>
                  <groupId>org.codehaus.plexus</groupId>
                  <artifactId>plexus-archiver</artifactId>
                  <version>2.1.2</version>
              </dependency>
        </dependencies>
      </plugin>
        <plugin>
            <groupId>org.datanucleus</groupId>
            <artifactId>maven-datanucleus-plugin</artifactId>
            <version>3.0.2</version>
            <configuration>
                <fork>false</fork>
                <!-- <mappingIncludes>net/mademocratie/gae/model/*.class</mappingIncludes> -->
                <verbose>true</verbose>
                <enhancerName>ASM</enhancerName>
                <api>JDO</api>
            </configuration>
            <executions>
                <execution>
                    <phase>compile</phase>
                    <goals>
                        <goal>enhance</goal>
                    </goals>
                </execution>
            </executions>
            <dependencies>
                <dependency>
                    <groupId>org.datanucleus</groupId>
                    <artifactId>datanucleus-core</artifactId>
                    <version>${datanucleus.version}</version>
                    <scope>runtime</scope>
                    <exclusions>
                        <exclusion>
                            <groupId>javax.transaction</groupId>
                            <artifactId>transaction-api</artifactId>
                        </exclusion>
                    </exclusions>
                </dependency>
                <dependency>
                    <groupId>org.datanucleus</groupId>
                    <artifactId>datanucleus-rdbms</artifactId>
                    <version>${datanucleus.version}</version>
                </dependency>
                <dependency>
                    <groupId>org.datanucleus</groupId>
                    <artifactId>datanucleus-enhancer</artifactId>
                    <version>3.1.1</version>
                </dependency>
                <dependency>
                    <groupId>javax.jdo</groupId>
                    <artifactId>jdo2-api</artifactId>
                    <version>2.3-ec</version>
                </dependency>
            </dependencies>
        </plugin>
      <!--
        Upload application to the appspot automatically, during release:perform
      -->
      <plugin>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <goals>gae:deploy</goals>
        </configuration>
      </plugin>

        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <configuration>
                <webResources>
                    <resource>
                        <directory>src/main/webapp</directory>
                        <filtering>true</filtering>
                        <includes>
                            <include>**/appengine-web.xml</include>
                            <include>**/web.xml</include>
                        </includes>
                    </resource>
                </webResources>
            </configuration>
        </plugin>

      <!-- Java compiler version -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>2.0</version>
        <configuration>
          <source>1.6</source>
          <target>1.6</target>
        </configuration>
      </plugin>
      <plugin>
          <artifactId>maven-failsafe-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>${maven-surefire-plugin.version}</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.6.6</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.6.1</version>
    </dependency>
    <!--
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>0.9.24</version>
    </dependency>
    -->

      <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>servlet-api</artifactId>
          <version>2.5</version>
      </dependency>
      <dependency>
          <groupId>org.apache.wicket</groupId>
          <artifactId>wicket-core</artifactId>
          <version>${wicket.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.wicket</groupId>
          <artifactId>wicket-auth-roles</artifactId>
          <version>${wicket.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.wicket</groupId>
          <artifactId>wicket-util</artifactId>
          <version>${wicket.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.wicket</groupId>
          <artifactId>wicket-ioc</artifactId>
          <version>${wicket.version}</version>
      </dependency>
      <dependency>
          <groupId>org.apache.wicket</groupId>
          <artifactId>wicket-request</artifactId>
          <version>${wicket.version}</version>
      </dependency>
      <dependency>
          <groupId>org.wicketstuff</groupId>
          <artifactId>wicketstuff-gae-initializer</artifactId>
          <version>${wicket.version}</version>
      </dependency>
      <dependency>
          <groupId>com.google.inject</groupId>
          <artifactId>guice</artifactId>
          <version>3.0</version>
      </dependency>
      <dependency>
          <groupId>org.apache.wicket</groupId>
          <artifactId>wicket-guice</artifactId>
          <version>6.0.0</version>
      </dependency>
      <dependency>
          <groupId>javax.jdo</groupId>
          <artifactId>jdo2-api</artifactId>
          <version>2.3-eb</version>
      </dependency>

    <!--
      GAE libraries for local testing as described here:
      http://code.google.com/appengine/docs/java/howto/unittesting.html
    -->
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-labs</artifactId>
      <version>${gae.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-stubs</artifactId>
      <version>${gae.version}</version>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-local-runtime</artifactId>
      <version>${gae.version}</version>
      <scope>test</scope>
    </dependency>

      <dependency>
          <groupId>com.google.appengine</groupId>
          <artifactId>appengine-api-1.0-sdk</artifactId>
          <version>${gae.version}</version>
      </dependency>
      <dependency>
          <groupId>com.google.appengine</groupId>
          <artifactId>appengine-testing</artifactId>
          <version>${gae.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>com.google.appengine.orm</groupId>
          <artifactId>datanucleus-appengine</artifactId>
          <version>2.1.1</version>
      </dependency>
      <dependency>
          <groupId>org.datanucleus</groupId>
          <artifactId>datanucleus-core</artifactId>
          <version>${datanucleus.version}</version>
          <scope>runtime</scope>
      </dependency>
      <dependency>
          <groupId>org.datanucleus</groupId>
          <artifactId>datanucleus-api-jdo</artifactId>
          <version>3.1.1</version>
      </dependency>
      <dependency>
          <groupId>javax.jdo</groupId>
          <artifactId>jdo-api</artifactId>
          <version>3.0.1</version>
      </dependency>

      <!-- test dependencies are always included -->
      <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
          <!-- Spring TestContext 2.5.6 only supports JUnit 4.4 see http://jira.springframework.org/browse/SPR-5145 -->
          <version>${junit.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-all</artifactId>
          <version>${mockito.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-core</artifactId>
          <version>${mockito.version}</version>
          <scope>test</scope>
      </dependency>
      <dependency>
          <groupId>javax.persistence</groupId>
          <artifactId>persistence-api</artifactId>
          <version>1.0</version>
      </dependency>
  </dependencies>

</project>
